services/core-services/dns/resources/powerdns/service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: powerdns-api
  namespace: dns
spec:
  ports:
    - name: api
      port: 8081
      targetPort: api
  selector:
    app: powerdns
