services/core-services/dns/resources/powerdns/service-powerdns.yml
apiVersion: v1
kind: Service
metadata:
  name: powerdns
  namespace: dns
  annotations:
    metallb.universe.tf/allow-shared-ip: "core-services"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.14
  externalTrafficPolicy: Cluster
  ports:
    - name: dns
      port: 53
      targetPort: dns
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: dns
      protocol: UDP
  selector:
    app: powerdns
