services/core-services/dns/resources/powerdns/ingress-api.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: powerdns-api
  namespace: dns
  
spec:
  entryPoints:
    - websecure
    - web

  routes:
    - match: Host(`powerdns.nebulanet.xyz`)
      kind: Rule
      services:
        - name: powerdns-api
          kind: Service
          port: api
  tls:
    secretName: powerdns-api-tls
